Port: worldgen registration & datagen