@@ -2,6 +2,9 @@ package net.tropicraft.core.common.dimension.feature;
 
 import com.google.common.collect.ImmutableList;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Holder;
+import net.minecraft.core.HolderSet;
+import net.minecraft.core.Registry;
 import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.features.OreFeatures;
 import net.minecraft.data.worldgen.features.VegetationFeatures;
@@ -22,20 +25,10 @@ import net.minecraft.world.level.levelgen.VerticalAnchor;
 import net.minecraft.world.level.levelgen.blockpredicates.BlockPredicate;
 import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
 import net.minecraft.world.level.levelgen.feature.Feature;
-import net.minecraft.world.level.levelgen.feature.configurations.DiskConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.FeatureConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.NoneFeatureConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.OreConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.ProbabilityFeatureConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.RandomBooleanFeatureConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.RandomPatchConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.SimpleBlockConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.SimpleRandomFeatureConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.TreeConfiguration;
+import net.minecraft.world.level.levelgen.feature.configurations.*;
 import net.minecraft.world.level.levelgen.feature.featuresize.TwoLayersFeatureSize;
 import net.minecraft.world.level.levelgen.feature.foliageplacers.FoliagePlacer;
 import net.minecraft.world.level.levelgen.feature.stateproviders.BlockStateProvider;
-import net.minecraft.world.level.levelgen.feature.stateproviders.SimpleStateProvider;
 import net.minecraft.world.level.levelgen.feature.stateproviders.WeightedStateProvider;
 import net.minecraft.world.level.levelgen.feature.trunkplacers.StraightTrunkPlacer;
 import net.minecraft.world.level.levelgen.heightproviders.HeightProvider;
@@ -46,99 +39,84 @@ import net.tropicraft.Constants;
 import net.tropicraft.core.common.TropicraftTags;
 import net.tropicraft.core.common.block.TropicraftBlocks;
 import net.tropicraft.core.common.block.TropicraftTrees;
-import net.tropicraft.core.common.data.TropicraftBlockTagsProvider;
 import net.tropicraft.core.common.data.WorldgenDataConsumer;
 import net.tropicraft.core.common.dimension.feature.block_state_provider.NoiseFromTagBlockStateProvider;
 import net.tropicraft.core.common.dimension.feature.config.RainforestVinesConfig;
-import net.tropicraft.core.common.dimension.feature.tree.CitrusFoliagePlacer;
-import net.tropicraft.core.common.dimension.feature.tree.CitrusTrunkPlacer;
-import net.tropicraft.core.common.dimension.feature.tree.PapayaFoliagePlacer;
-import net.tropicraft.core.common.dimension.feature.tree.PapayaTreeDecorator;
-import net.tropicraft.core.common.dimension.feature.tree.PleodendronFoliagePlacer;
-import net.tropicraft.core.common.dimension.feature.tree.PleodendronTrunkPlacer;
-import net.tropicraft.core.common.dimension.feature.tree.mangrove.MangroveFoliagePlacer;
-import net.tropicraft.core.common.dimension.feature.tree.mangrove.MangroveTrunkPlacer;
-import net.tropicraft.core.common.dimension.feature.tree.mangrove.PianguasTreeDecorator;
-import net.tropicraft.core.common.dimension.feature.tree.mangrove.PneumatophoresTreeDecorator;
-import net.tropicraft.core.common.dimension.feature.tree.mangrove.SmallMangroveFoliagePlacer;
-import net.tropicraft.core.common.dimension.feature.tree.mangrove.SmallMangroveTrunkPlacer;
+import net.tropicraft.core.common.dimension.feature.tree.*;
+import net.tropicraft.core.common.dimension.feature.tree.mangrove.*;
 import org.jetbrains.annotations.NotNull;
-import net.tropicraft.core.mixin.PlacedFeatureAccessor;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.OptionalInt;
-import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import static net.minecraft.data.worldgen.placement.VegetationPlacements.worldSurfaceSquaredWithCount;
 import static net.tropicraft.core.common.block.TropicraftTrees.BEEHIVE_002;
 
 public final class TropicraftConfiguredFeatures {
-    public final PlacedFeature grapefruitTree;
-    public final PlacedFeature orangeTree;
-    public final PlacedFeature lemonTree;
-    public final PlacedFeature limeTree;
-    public final PlacedFeature normalPalmTree;
-    public final PlacedFeature curvedPalmTree;
-    public final PlacedFeature largePalmTree;
-    public final PlacedFeature rainforestUpTree;
-    public final PlacedFeature rainforestSmallTualung;
-    public final PlacedFeature rainforestLargeTualung;
-    public final PlacedFeature rainforestTallTree;
-    public final PlacedFeature rainforestVines;
-    public final PlacedFeature eih;
-    public final PlacedFeature tropicsGrass;
-    public final PlacedFeature bamboo;
+    public final Holder<PlacedFeature> grapefruitTree;
+    public final Holder<PlacedFeature> orangeTree;
+    public final Holder<PlacedFeature> lemonTree;
+    public final Holder<PlacedFeature> limeTree;
+    public final Holder<PlacedFeature> normalPalmTree;
+    public final Holder<PlacedFeature> curvedPalmTree;
+    public final Holder<PlacedFeature> largePalmTree;
+    public final Holder<PlacedFeature> rainforestUpTree;
+    public final Holder<PlacedFeature> rainforestSmallTualung;
+    public final Holder<PlacedFeature> rainforestLargeTualung;
+    public final Holder<PlacedFeature> rainforestTallTree;
+    public final Holder<PlacedFeature> rainforestVines;
+    public final Holder<PlacedFeature> eih;
+    public final Holder<PlacedFeature> tropicsGrass;
+    public final Holder<PlacedFeature> bamboo;
 
-    public final PlacedFeature redMangroveShort;
-    public final PlacedFeature redMangroveSmall;
-    public final PlacedFeature redMangrove;
+    public final Holder<PlacedFeature> redMangroveShort;
+    public final Holder<PlacedFeature> redMangroveSmall;
+    public final Holder<PlacedFeature> redMangrove;
 
-    public final PlacedFeature blackMangrove;
-    public final PlacedFeature tallMangrove;
-    public final PlacedFeature teaMangrove;
-    public final PlacedFeature lightMangroves;
+    public final Holder<PlacedFeature> blackMangrove;
+    public final Holder<PlacedFeature> tallMangrove;
+    public final Holder<PlacedFeature> teaMangrove;
+    public final Holder<PlacedFeature> lightMangroves;
 
-    public final PlacedFeature mangroves;
-    public final PlacedFeature papaya;
+    public final Holder<PlacedFeature> mangroves;
+    public final Holder<PlacedFeature> papaya;
 
-    public final PlacedFeature mangroveVegetation;
-    public final PlacedFeature sparseMangroveVegetation;
+    public final Holder<PlacedFeature> mangroveVegetation;
+    public final Holder<PlacedFeature> sparseMangroveVegetation;
 
-    public final PlacedFeature mudDisk;
+    public final Holder<PlacedFeature> mudDisk;
 
-    public final PlacedFeature smallGoldenLeatherFern;
-    public final PlacedFeature tallGoldenLeatherFern;
-    public final PlacedFeature hugeGoldenLeatherFern;
-    public final PlacedFeature overgrownSmallGoldenLeatherFern;
-    public final PlacedFeature overgrownTallGoldenLeatherFern;
-    public final PlacedFeature overgrownHugeGoldenLeatherFern;
+    public final Holder<PlacedFeature> smallGoldenLeatherFern;
+    public final Holder<PlacedFeature> tallGoldenLeatherFern;
+    public final Holder<PlacedFeature> hugeGoldenLeatherFern;
+    public final Holder<PlacedFeature> overgrownSmallGoldenLeatherFern;
+    public final Holder<PlacedFeature> overgrownTallGoldenLeatherFern;
+    public final Holder<PlacedFeature> overgrownHugeGoldenLeatherFern;
 
-    public final PlacedFeature pleodendron;
+    public final Holder<PlacedFeature> pleodendron;
 
-    public final PlacedFeature pineapplePatch;
-    public final PlacedFeature tropicsFlowers;
-    public final PlacedFeature rainforestFlowers;
-    public final PlacedFeature irisFlowers;
+    public final Holder<PlacedFeature> pineapplePatch;
+    public final Holder<PlacedFeature> tropicsFlowers;
+    public final Holder<PlacedFeature> rainforestFlowers;
+    public final Holder<PlacedFeature> irisFlowers;
 
-    public final PlacedFeature coffeeBush;
-    public final PlacedFeature undergrowth;
-    public final PlacedFeature singleUndergrowth;
+    public final Holder<PlacedFeature> coffeeBush;
+    public final Holder<PlacedFeature> undergrowth;
+    public final Holder<PlacedFeature> singleUndergrowth;
 
-    public final PlacedFeature seagrass;
-    public final PlacedFeature undergroundSeagrassOnStone;
-    public final PlacedFeature undergroundSeagrassOnDirt;
-    public final PlacedFeature undergroundSeaPickles;
+    public final Holder<PlacedFeature> seagrass;
+    public final Holder<PlacedFeature> undergroundSeagrassOnStone;
+    public final Holder<PlacedFeature> undergroundSeagrassOnDirt;
+    public final Holder<PlacedFeature> undergroundSeaPickles;
 
-    public final PlacedFeature mangroveReeds;
+    public final Holder<PlacedFeature> mangroveReeds;
 
-    public final PlacedFeature azurite;
-    public final PlacedFeature eudialyte;
-    public final PlacedFeature zircon;
-    public final PlacedFeature manganese;
-    public final PlacedFeature shaka;
+    public final Holder<PlacedFeature> azurite;
+    public final Holder<PlacedFeature> eudialyte;
+    public final Holder<PlacedFeature> zircon;
+    public final Holder<PlacedFeature> manganese;
+    public final Holder<PlacedFeature> shaka;
 
     public TropicraftConfiguredFeatures(WorldgenDataConsumer<? extends ConfiguredFeature<?, ?>> worldgen, WorldgenDataConsumer<PlacedFeature> placed) {
         Register features = new Register(worldgen, placed);
@@ -158,50 +136,51 @@ public final class TropicraftConfiguredFeatures {
         this.rainforestTallTree = features.sparseTree("rainforest_tall_tree", TropicraftFeatures.TALL_TREE, FeatureConfiguration.NONE, TropicraftBlocks.MAHOGANY_SAPLING, 0.5F);
 
         this.rainforestVines = features.registerPlaced("rainforest_vines", TropicraftFeatures.VINES,
-                f -> f.configured(new RainforestVinesConfig()), f -> f.placed(CountPlacement.of(50), InSquarePlacement.spread())
+                new RainforestVinesConfig(),
+                List.of(CountPlacement.of(50), InSquarePlacement.spread())
         );
 
         // TODO 1.18 adjust rarity
         this.smallGoldenLeatherFern = features.registerPlaced(
                 "small_golden_leather_fern",
                 Feature.RANDOM_PATCH,
-                f -> features.randomPatch(TropicraftBlocks.GOLDEN_LEATHER_FERN),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(45), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(TropicraftBlocks.GOLDEN_LEATHER_FERN),
+                List.of(RarityFilter.onAverageOnceEvery(45), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
         this.tallGoldenLeatherFern = features.registerPlaced(
                 "tall_golden_leather_fern",
                 Feature.RANDOM_PATCH,
-                f -> features.randomPatch(TropicraftBlocks.TALL_GOLDEN_LEATHER_FERN),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(90), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(TropicraftBlocks.TALL_GOLDEN_LEATHER_FERN),
+                List.of(RarityFilter.onAverageOnceEvery(90), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
         this.hugeGoldenLeatherFern = features.registerPlaced(
                 "huge_golden_leather_fern",
                 Feature.RANDOM_PATCH,
-                f -> features.randomPatch(TropicraftBlocks.LARGE_GOLDEN_LEATHER_FERN),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(150), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(TropicraftBlocks.LARGE_GOLDEN_LEATHER_FERN),
+                List.of(RarityFilter.onAverageOnceEvery(150), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
         this.overgrownSmallGoldenLeatherFern = features.registerPlaced(
                 "overgrown_small_golden_leather_fern",
                 Feature.RANDOM_PATCH,
-                f -> features.randomPatch(TropicraftBlocks.GOLDEN_LEATHER_FERN),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(35), CountPlacement.of(10), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(TropicraftBlocks.GOLDEN_LEATHER_FERN),
+                List.of(RarityFilter.onAverageOnceEvery(35), CountPlacement.of(10), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
         this.overgrownTallGoldenLeatherFern = features.registerPlaced(
                 "overgrown_tall_golden_leather_fern",
                 Feature.RANDOM_PATCH,
-                f -> features.randomPatch(TropicraftBlocks.TALL_GOLDEN_LEATHER_FERN),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(60), CountPlacement.of(8), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(TropicraftBlocks.TALL_GOLDEN_LEATHER_FERN),
+                List.of(RarityFilter.onAverageOnceEvery(60), CountPlacement.of(8), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
         this.overgrownHugeGoldenLeatherFern = features.registerPlaced(
                 "overgrown_huge_golden_leather_fern",
                 Feature.RANDOM_PATCH,
-                f -> features.randomPatch(TropicraftBlocks.LARGE_GOLDEN_LEATHER_FERN),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(90), CountPlacement.of(6), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(TropicraftBlocks.LARGE_GOLDEN_LEATHER_FERN),
+                List.of(RarityFilter.onAverageOnceEvery(90), CountPlacement.of(6), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
         this.pleodendron = features.tree("pleodendron",
@@ -263,7 +242,7 @@ public final class TropicraftConfiguredFeatures {
                 TropicraftBlocks.RED_MANGROVE_PROPAGULE,
                 0
         );
-        this.redMangrove = features.random("red_mangrove", this.redMangroveShort, this.redMangroveSmall);
+        this.redMangrove = features.random("red_mangrove", HolderSet.direct(this.redMangroveShort, this.redMangroveSmall));
 
         this.tallMangrove = features.mangrove("tall_mangrove",
                 new TreeConfiguration.TreeConfigurationBuilder(
@@ -302,12 +281,12 @@ public final class TropicraftConfiguredFeatures {
                 TropicraftBlocks.BLACK_MANGROVE_PROPAGULE,
                 1
         );
-        this.lightMangroves = features.random("light_mangroves", this.tallMangrove, this.teaMangrove, this.blackMangrove);
+        this.lightMangroves = features.random("light_mangroves", HolderSet.direct(this.tallMangrove, this.teaMangrove, this.blackMangrove));
 
-        this.mangroves = features.random("mangroves", this.redMangrove, this.lightMangroves);
+        this.mangroves = features.random("mangroves", HolderSet.direct(this.redMangrove, this.lightMangroves));
 
         this.mangroveVegetation = features.registerPlaced("mangrove_vegetation", this.mangroves,
-                    f -> f.placed(
+                    List.of(
                             NoiseBasedCountPlacement.of(7, 200.0, 1.5),
                             InSquarePlacement.spread(),
                             HeightmapPlacement.onHeightmap(Heightmap.Types.OCEAN_FLOOR),
@@ -316,7 +295,7 @@ public final class TropicraftConfiguredFeatures {
         );
 
         this.sparseMangroveVegetation = features.registerPlaced("sparse_mangrove_vegetation", this.mangroves,
-                f -> f.placed(
+                List.of(
                         NoiseBasedCountPlacement.of(3, 200.0, 1.5),
                         InSquarePlacement.spread(),
                         HeightmapPlacement.onHeightmap(Heightmap.Types.OCEAN_FLOOR),
@@ -326,18 +305,20 @@ public final class TropicraftConfiguredFeatures {
 
         this.mudDisk = features.registerPlaced(
                 "mud_disk",
-                Feature.DISK.configured(new DiskConfiguration(
+                Feature.DISK,
+                new DiskConfiguration(
                         TropicraftBlocks.MUD.get().defaultBlockState(),
                         UniformInt.of(2, 4),
                         2,
                         ImmutableList.of(Blocks.DIRT.defaultBlockState(), Blocks.GRASS_BLOCK.defaultBlockState())
-                )).placed(CountPlacement.of(3), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_TOP_SOLID, BiomeFilter.biome())
+                ),
+                List.of(CountPlacement.of(3), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_TOP_SOLID, BiomeFilter.biome())
         );
 
         this.eih = features.noConfig(
                 "eih",
                 TropicraftFeatures.EIH,
-                f -> f.placed(PlacementUtils.countExtra(0, 0.1f, 1),
+                List.of(PlacementUtils.countExtra(0, 0.1f, 1),
                         InSquarePlacement.spread(),
                         PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())
         );
@@ -345,13 +326,15 @@ public final class TropicraftConfiguredFeatures {
         this.tropicsGrass = features.registerPlaced(
                 "tropics_grass",
                 Feature.RANDOM_PATCH,
-                f -> f.configured(VegetationFeatures.PATCH_GRASS_JUNGLE.config),
-                f -> f.placed(worldSurfaceSquaredWithCount(10))
+                VegetationFeatures.PATCH_GRASS_JUNGLE.value().config(),
+                worldSurfaceSquaredWithCount(10)
         );
 
         this.bamboo = features.registerPlaced(
                 "bamboo",
-                Feature.BAMBOO.configured(new ProbabilityFeatureConfiguration(0.15F)).placed(
+                Feature.BAMBOO,
+                new ProbabilityFeatureConfiguration(0.15F),
+                List.of(
                         NoiseBasedCountPlacement.of(70, 140.0D, 0.3D),
                         InSquarePlacement.spread(),
                         PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
@@ -362,85 +345,85 @@ public final class TropicraftConfiguredFeatures {
         this.pineapplePatch = features.registerPlaced(
                 "pineapple_patch",
                 Feature.RANDOM_PATCH,
-                f -> features.randomPatch(TropicraftBlocks.PINEAPPLE),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(6), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(TropicraftBlocks.PINEAPPLE),
+                List.of(RarityFilter.onAverageOnceEvery(6), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
-        BlockStateProvider tropicsFlowersProvider = new NoiseFromTagBlockStateProvider(TropicraftTags.Blocks.TROPICS_FLOWERS);
+        BlockStateProvider tropicsFlowersProvider = new NoiseFromTagBlockStateProvider(Registry.BLOCK.getOrCreateTag(TropicraftTags.Blocks.TROPICS_FLOWERS));
         this.tropicsFlowers = features.registerPlaced(
                 "tropics_flowers",
                 Feature.FLOWER,
-                f -> features.randomPatch(tropicsFlowersProvider),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(2), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(tropicsFlowersProvider),
+                List.of(RarityFilter.onAverageOnceEvery(2), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
-        BlockStateProvider rainforestFlowersProvider = new NoiseFromTagBlockStateProvider(TropicraftTags.Blocks.RAINFOREST_FLOWERS);
+        BlockStateProvider rainforestFlowersProvider = new NoiseFromTagBlockStateProvider(Registry.BLOCK.getOrCreateTag(TropicraftTags.Blocks.RAINFOREST_FLOWERS));
         this.rainforestFlowers = features.registerPlaced(
                 "rainforest_flowers",
                 Feature.FLOWER,
-                f -> features.randomPatch(rainforestFlowersProvider),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(6), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(rainforestFlowersProvider),
+                List.of(RarityFilter.onAverageOnceEvery(6), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
         this.irisFlowers = features.registerPlaced(
                 "iris_flowers",
                 Feature.RANDOM_PATCH,
-                f -> features.randomPatch(TropicraftBlocks.IRIS),
-                f -> f.placed(RarityFilter.onAverageOnceEvery(3), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
+                features.randomPatch(TropicraftBlocks.IRIS),
+                List.of(RarityFilter.onAverageOnceEvery(3), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())
         );
 
         this.coffeeBush = features.noConfig(
                 "coffee_bush",
                 TropicraftFeatures.COFFEE_BUSH,
-                f -> f.placed(worldSurfaceSquaredWithChance(25))
+                worldSurfaceSquaredWithChance(25)
         );
 
         this.undergrowth = features.noConfig(
                 "undergrowth",
                 TropicraftFeatures.UNDERGROWTH,
-                f -> f.placed(worldSurfaceSquaredWithChance(5))
+                worldSurfaceSquaredWithChance(5)
         );
 
         this.singleUndergrowth = features.noConfig(
                 "single_undergrowth",
                 TropicraftFeatures.SINGLE_UNDERGROWTH,
-                f -> f.placed(worldSurfaceSquaredWithCount(2))
+                worldSurfaceSquaredWithCount(2)
         );
 
         this.seagrass = features.registerPlaced("seagrass", Feature.SEAGRASS,
-                feature -> feature.configured(new ProbabilityFeatureConfiguration(0.3f)),
-                feature -> feature.placed(CountPlacement.of(48), InSquarePlacement.spread(), HeightmapPlacement.onHeightmap(Heightmap.Types.OCEAN_FLOOR_WG))
+                new ProbabilityFeatureConfiguration(0.3f),
+                List.of(CountPlacement.of(48), InSquarePlacement.spread(), HeightmapPlacement.onHeightmap(Heightmap.Types.OCEAN_FLOOR_WG))
         );
 
         this.undergroundSeagrassOnStone = features.registerPlaced(
                 "underground_seagrass_on_stone",
                 Feature.SIMPLE_BLOCK,
-                f -> f.configured(new SimpleBlockConfiguration(BlockStateProvider.simple(Blocks.SEAGRASS))),
-                f -> f.placed(getSeagrassPlacementModifiers(() -> Blocks.STONE))
+                new SimpleBlockConfiguration(BlockStateProvider.simple(Blocks.SEAGRASS)),
+                getSeagrassPlacement(() -> Blocks.STONE)
         );
 
 
         this.undergroundSeagrassOnDirt = features.registerPlaced(
                 "underground_seagrass_on_dirt",
                 Feature.SIMPLE_BLOCK,
-                f -> f.configured(new SimpleBlockConfiguration(BlockStateProvider.simple(Blocks.SEAGRASS))),
-                f -> f.placed(getSeagrassPlacementModifiers(() -> Blocks.DIRT))
+                new SimpleBlockConfiguration(BlockStateProvider.simple(Blocks.SEAGRASS)),
+                getSeagrassPlacement(() -> Blocks.DIRT)
         );
 
         this.undergroundSeaPickles = features.noConfig(
                 "underground_sea_pickles",
                 TropicraftFeatures.UNDERGROUND_SEA_PICKLE,
-                f -> f.placed(
-                        ImmutableList.of(CarvingMaskPlacement.forStep(GenerationStep.Carving.LIQUID),
-                                RarityFilter.onAverageOnceEvery(10),
-                                BiomeFilter.biome())
+                List.of(
+                        CarvingMaskPlacement.forStep(GenerationStep.Carving.LIQUID),
+                        RarityFilter.onAverageOnceEvery(10),
+                        BiomeFilter.biome()
                 )
         );
 
         this.mangroveReeds = features.noConfig(
                 "mangrove_reeds",
                 TropicraftFeatures.REEDS,
-                feature -> feature.placed(CountPlacement.of(48),
+                List.of(CountPlacement.of(48),
                         InSquarePlacement.spread(),
                         HeightmapPlacement.onHeightmap(Heightmap.Types.OCEAN_FLOOR_WG),
                         BiomeFilter.biome()
@@ -498,7 +481,7 @@ public final class TropicraftConfiguredFeatures {
     }
 
     @NotNull
-    private ImmutableList<PlacementModifier> getSeagrassPlacementModifiers(final Supplier<Block> belowBlock) {
+    private ImmutableList<PlacementModifier> getSeagrassPlacement(final Supplier<Block> belowBlock) {
         final BlockPredicateFilter seagrassPredicate = BlockPredicateFilter.forPredicate(BlockPredicate.allOf(
                 BlockPredicate.matchesBlock(belowBlock.get(), new BlockPos(0, -1, 0)),
                 BlockPredicate.matchesBlock(Blocks.WATER, BlockPos.ZERO),
@@ -627,59 +610,58 @@ public final class TropicraftConfiguredFeatures {
         }
 
         // Register configured feature
-        public <F extends Feature<?>> ConfiguredFeature<?, ?> registerConfigured(String id, ConfiguredFeature<?, ?> feature) {
+        public <F extends Feature<?>> Holder<ConfiguredFeature<?, ?>> registerConfigured(String id, ConfiguredFeature<?, ?> feature) {
             return this.worldgen.register(new ResourceLocation(Constants.MODID, id), feature);
         }
 
         // Register placed feature
-        public PlacedFeature registerPlaced(String id, PlacedFeature feature) {
+        public Holder<PlacedFeature> registerPlaced(String id, PlacedFeature feature) {
             return this.placed.register(new ResourceLocation(Constants.MODID, id), feature);
         }
 
         // Add placements on top of an existing placed feature, removing any that already exist (intended for use with configured selector features which have no placements anyway)
-        public PlacedFeature registerPlaced(String id, PlacedFeature feature, Function<ConfiguredFeature<?, ?>, PlacedFeature> extra) {
-            return this.placed.register(new ResourceLocation(Constants.MODID, id), extra.apply(unwrap(feature)));
+        public Holder<PlacedFeature> registerPlaced(String id, Holder<PlacedFeature> feature, List<PlacementModifier> placement) {
+            return this.placed.register(new ResourceLocation(Constants.MODID, id), new PlacedFeature(feature.value().feature(), placement));
         }
 
         // Configure a feature with the configure function, and place it with the place function
-        public <F extends Feature<?>, CF extends ConfiguredFeature<?, ?>> PlacedFeature registerPlaced(String id, F feature, Function<F, CF> configure, Function<CF, PlacedFeature> place) {
-            CF configured = configure.apply(feature);
-            this.registerConfigured(id, configured);
-            return this.registerPlaced(id, place.apply(configured));
+        public <C extends FeatureConfiguration, F extends Feature<C>> Holder<PlacedFeature> registerPlaced(String id, F feature, C config, List<PlacementModifier> placement) {
+            final Holder<ConfiguredFeature<?, ?>> configured = this.registerConfigured(id, new ConfiguredFeature<>(feature, config));
+            return this.registerPlaced(id, new PlacedFeature(configured, placement));
         }
 
         // Call above method but RegistryObject<Feature> -> Feature
-        public <F extends Feature<?>, CF extends ConfiguredFeature<?, ?>> PlacedFeature registerPlaced(String id, RegistryObject<F> feature, Function<F, CF> configure, Function<CF, PlacedFeature> place) {
-            return this.registerPlaced(id, feature.get(), configure, place);
+        public <C extends FeatureConfiguration, F extends Feature<C>> Holder<PlacedFeature> registerPlaced(String id, RegistryObject<F> feature, C config, List<PlacementModifier> placement) {
+            return this.registerPlaced(id, feature.get(), config, placement);
         }
 
-        public <F extends Feature<NoneFeatureConfiguration>, CF extends ConfiguredFeature<?, ?>> PlacedFeature noConfig(String id, RegistryObject<F> feature, Function<CF, PlacedFeature> place) {
-            return this.registerPlaced(id, feature, f -> (CF) f.configured(NoneFeatureConfiguration.INSTANCE), place);
+        public <F extends Feature<NoneFeatureConfiguration>> Holder<PlacedFeature> noConfig(String id, RegistryObject<F> feature, List<PlacementModifier> placement) {
+            return this.registerPlaced(id, feature, NoneFeatureConfiguration.INSTANCE, placement);
         }
 
-        public ConfiguredFeature<?, ?> randomPatch(final Supplier<? extends Block> block) {
+        public RandomPatchConfiguration randomPatch(final Supplier<? extends Block> block) {
             return randomPatch(BlockStateProvider.simple(block.get()));
         }
 
-        public ConfiguredFeature<?, ?> randomPatch(final BlockStateProvider blockStateProvider) {
-            return Feature.RANDOM_PATCH.configured(FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK.configured(new SimpleBlockConfiguration(blockStateProvider))));
+        public RandomPatchConfiguration randomPatch(final BlockStateProvider blockStateProvider) {
+            return FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(blockStateProvider));
         }
 
-        private PlacedFeature placedOre(Register register, final String name, final int blobSize, final Supplier<? extends Block> block, final int count, PlacementModifier modifier) {
+        private Holder<PlacedFeature> placedOre(Register register, final String name, final int blobSize, final Supplier<? extends Block> block, final int count, PlacementModifier modifier) {
             return register.registerPlaced(
                     name,
                     Feature.ORE,
-                    f -> register.configuredOre(blobSize, block),
-                    f -> f.placed(rareOrePlacement(count, modifier))
+                    register.ore(blobSize, block),
+                    rareOrePlacement(count, modifier)
             );
         }
 
         // TODO add deepslate / tropicraft equivalent replacement here
-        public ConfiguredFeature<?, ?> configuredOre(final int blobSize, final Supplier<? extends Block> block) {
-            return Feature.ORE.configured(new OreConfiguration(OreFeatures.STONE_ORE_REPLACEABLES, block.get().defaultBlockState(), blobSize));
+        public OreConfiguration ore(final int blobSize, final Supplier<? extends Block> block) {
+            return new OreConfiguration(OreFeatures.STONE_ORE_REPLACEABLES, block.get().defaultBlockState(), blobSize);
         }
 
-        public PlacedFeature fruitTree(String id, Supplier<? extends Block> sapling, Supplier<? extends Block> fruitLeaves) {
+        public Holder<PlacedFeature> fruitTree(String id, Supplier<? extends Block> sapling, Supplier<? extends Block> fruitLeaves) {
             TreeConfiguration config = new TreeConfiguration.TreeConfigurationBuilder(
                     BlockStateProvider.simple(Blocks.OAK_LOG.defaultBlockState()),
                     new CitrusTrunkPlacer(6, 3, 0),
@@ -691,90 +673,72 @@ public final class TropicraftConfiguredFeatures {
                     new CitrusFoliagePlacer(ConstantInt.of(0), ConstantInt.of(0)),
                     new TwoLayersFeatureSize(1, 0, 2)
             ).build();
-
             return this.tree(id, config, sapling, 0, 0.1F, 1);
         }
 
-        public <F extends Feature<FC>, FC extends FeatureConfiguration> PlacedFeature palmTree(String id, RegistryObject<F> feature, FC config, Supplier<? extends Block> sapling, float chance) {
-            return this.registerPlaced(id, feature,  (F f) -> f.configured(config),
-                    f -> f.placed(PlacementUtils.countExtra(0, chance, 1), InSquarePlacement.spread(),
-                            PlacementUtils.HEIGHTMAP,
-                            BlockPredicateFilter.forPredicate(BlockPredicate.matchesTag(BlockTags.SAND, new BlockPos(0, -1, 0))),
-                            BiomeFilter.biome()
-                            )
+        public <F extends Feature<FC>, FC extends FeatureConfiguration> Holder<PlacedFeature> palmTree(String id, RegistryObject<F> feature, FC config, Supplier<? extends Block> sapling, float chance) {
+            final List<PlacementModifier> placement = List.of(
+                    PlacementUtils.countExtra(0, chance, 1),
+                    InSquarePlacement.spread(),
+                    PlacementUtils.HEIGHTMAP,
+                    BlockPredicateFilter.forPredicate(BlockPredicate.matchesTag(BlockTags.SAND, new BlockPos(0, -1, 0))),
+                    BiomeFilter.biome()
             );
+            return this.registerPlaced(id, feature, config, placement);
         }
 
-        public <F extends Feature<FC>, FC extends FeatureConfiguration> PlacedFeature sparseTree(String id, RegistryObject<F> feature, FC config, Supplier<? extends Block> sapling, float chance) {
-            return this.registerPlaced(id, feature,  (F f) -> f.configured(config),
-                    f -> f.placed(PlacementUtils.countExtra(0, chance, 1), InSquarePlacement.spread(),
+        public <F extends Feature<FC>, FC extends FeatureConfiguration> Holder<PlacedFeature> sparseTree(String id, RegistryObject<F> feature, FC config, Supplier<? extends Block> sapling, float chance) {
+            final List<PlacementModifier> placement = List.of(
+                    PlacementUtils.countExtra(0, chance, 1),
+                    InSquarePlacement.spread(),
                     PlacementUtils.HEIGHTMAP,
                     BlockPredicateFilter.forPredicate(BlockPredicate.wouldSurvive(sapling.get().defaultBlockState(), BlockPos.ZERO)),
                     BiomeFilter.biome()
-                    )
             );
+            return this.registerPlaced(id, feature, config, placement);
         }
 
-        public PlacedFeature tree(String id, TreeConfiguration config, Supplier<? extends Block> sapling, int count, float extraChance, int extraCount) {
-            return this.registerPlaced(id, Feature.TREE, feature -> feature.configured(config), feature ->
-                    feature.placed(
-                            PlacementUtils.countExtra(count, extraChance, extraCount),
-                            InSquarePlacement.spread(),
-                            PlacementUtils.HEIGHTMAP,
-                            BlockPredicateFilter.forPredicate(BlockPredicate.wouldSurvive(sapling.get().defaultBlockState(), BlockPos.ZERO)),
-                            BiomeFilter.biome())
+        public Holder<PlacedFeature> tree(String id, TreeConfiguration config, Supplier<? extends Block> sapling, int count, float extraChance, int extraCount) {
+            final List<PlacementModifier> placement = List.of(
+                    PlacementUtils.countExtra(count, extraChance, extraCount),
+                    InSquarePlacement.spread(),
+                    PlacementUtils.HEIGHTMAP,
+                    BlockPredicateFilter.forPredicate(BlockPredicate.wouldSurvive(sapling.get().defaultBlockState(), BlockPos.ZERO)),
+                    BiomeFilter.biome()
             );
+            return this.registerPlaced(id, Feature.TREE, config, placement);
         }
 
-        public PlacedFeature mangrove(String id, TreeConfiguration config, Supplier<? extends Block> sapling, int maxWaterDepth) {
-            return this.registerPlaced(id, TropicraftFeatures.MANGROVE_TREE.get(), feature -> {
-                ConfiguredFeature<TreeConfiguration, ?> configured = feature.configured(config);
-
-                // TODO: do we need the if?
-//                if (maxWaterDepth > 0) {
-//                    return configured.decorated(FeatureDecorator.WATER_DEPTH_THRESHOLD.configured(new WaterDepthThresholdConfiguration(maxWaterDepth)));
-//                }
-
-                return configured;
-            }, f -> f.placed(SurfaceWaterDepthFilter.forMaxDepth(maxWaterDepth),
+        public Holder<PlacedFeature> mangrove(String id, TreeConfiguration config, Supplier<? extends Block> sapling, int maxWaterDepth) {
+            final List<PlacementModifier> placement = List.of(
+                    SurfaceWaterDepthFilter.forMaxDepth(maxWaterDepth),
                     BlockPredicateFilter.forPredicate(BlockPredicate.wouldSurvive(sapling.get().defaultBlockState(), BlockPos.ZERO))
-                    ));
+            );
+            return this.registerPlaced(id, TropicraftFeatures.MANGROVE_TREE.get(), config, placement);
         }
 
-        public PlacedFeature random(String id, PlacedFeature... choices) {
-            if (choices.length == 2) {
-                PlacedFeature left = choices[0];
-                PlacedFeature right = choices[1];
-                return this.registerPlaced(id, Feature.RANDOM_BOOLEAN_SELECTOR, feature -> {
-                    return feature.configured(new RandomBooleanFeatureConfiguration(() -> left, () -> right));
-                }, ConfiguredFeature::placed);
+        public Holder<PlacedFeature> random(String id, HolderSet<PlacedFeature> choices) {
+            if (choices.size() == 2) {
+                Holder<PlacedFeature> left = choices.get(0);
+                Holder<PlacedFeature> right = choices.get(1);
+                RandomBooleanFeatureConfiguration config = new RandomBooleanFeatureConfiguration(left, right);
+                return this.registerPlaced(id, Feature.RANDOM_BOOLEAN_SELECTOR, config, List.of());
             }
 
-            return this.registerPlaced(id, Feature.SIMPLE_RANDOM_SELECTOR, feature -> {
-                SimpleRandomFeatureConfiguration config = new SimpleRandomFeatureConfiguration(Arrays.stream(choices)
-                        .map(c -> (Supplier<PlacedFeature>) (() -> c))
-                        .collect(Collectors.toList()));
-
-                return feature.configured(config);
-            }, ConfiguredFeature::placed);
+            SimpleRandomFeatureConfiguration config = new SimpleRandomFeatureConfiguration(choices);
+            return this.registerPlaced(id, Feature.SIMPLE_RANDOM_SELECTOR, config, List.of());
         }
     }
 
-    // Placed feature -> configured feature, with some spicy hacks
-    // Not safe under normal circumstances but as we're only using it for our own features it should be fine
-    private static ConfiguredFeature<?, ?> unwrap(PlacedFeature feature) {
-        return ((PlacedFeatureAccessor) feature).getFeature().get();
+    private static List<PlacementModifier> orePlacement(PlacementModifier count, PlacementModifier height) {
+        return List.of(count, InSquarePlacement.spread(), height, BiomeFilter.biome());
     }
 
-    private static List<PlacementModifier> orePlacement(PlacementModifier p_195347_, PlacementModifier p_195348_) {
-        return List.of(p_195347_, InSquarePlacement.spread(), p_195348_, BiomeFilter.biome());
+    private static List<PlacementModifier> commonOrePlacement(int rarity, PlacementModifier height) {
+        return orePlacement(CountPlacement.of(rarity), height);
     }
 
-    private static List<PlacementModifier> commonOrePlacement(int p_195344_, PlacementModifier p_195345_) {
-        return orePlacement(CountPlacement.of(p_195344_), p_195345_);
-    }
-
-    private static List<PlacementModifier> rareOrePlacement(int p_195350_, PlacementModifier p_195351_) {
-        return orePlacement(RarityFilter.onAverageOnceEvery(p_195350_), p_195351_);
+    private static List<PlacementModifier> rareOrePlacement(int rarity, PlacementModifier height) {
+        return orePlacement(RarityFilter.onAverageOnceEvery(rarity), height);
     }
 }
